feat: CT add game started

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         // 如果有匹配的结果，则提取日期部分
         if (match) {
           var date = match[0];
-          return data;
+          return date;
         }
       }
 
