--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         const formattedHours = hours % 12 === 0 ? 12 : hours % 12;
         const formattedMinutes = minutes < 10 ? "0" + minutes : minutes;
 
-        return `${formattedHours}:${formattedMinutes}`;
+        return `${hours}:${minutes}`;
       }
 
       function parseCustomTime(input) {
