--- a/index.html
+++ b/index.html
@@ -215,12 +215,9 @@
       function generateRandomTime() {
         const hours = Math.floor(Math.random() * 11) + 7; // 生成 7 到 17 之间的随机小时数
         const minutes = Math.floor(Math.random() * 60); // 生成 0 到 59 之间的随机分钟数
-
-        const period = hours < 12 ? "AM" : "PM";
-        const formattedHours = hours % 12 === 0 ? 12 : hours % 12;
+        const formattedHours = hours < 10 ? "0" + hours : hours;
         const formattedMinutes = minutes < 10 ? "0" + minutes : minutes;
-
-        return `${hours}:${minutes}`;
+        return `${formattedHours}:${formattedMinutes}`;
       }
 
       function parseCustomTime(input) {
