feat: CT add game started

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
 
       origin.style.width = 1200 + "px";
       origin.style.height = "auto";
+      console.log(1)
     </script>
   </body>
 </html>
