feat: CT add game started

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
       .wrap {
         position: relative;
+        font-size: 0px;
       }
       .water {
         position: absolute;
